adjusted styles to try to fix horizontal overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,6 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   i-moz-osx-font-smoothing: grayscale;
-	overflow-x: hidden;
 }
 
 /*
